fixed margins for image containers on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,6 +188,9 @@ footer {
     margin: auto;
   }
 
+  .img-container {
+    margin: 0;
+  }
   /* Cards */
 
   .section {
